Change file name to monday.js.

--- a/assets/floodFrame.html
+++ b/assets/floodFrame.html
@@ -8,7 +8,7 @@
   <body>
     <div id="loadItHere"></div>
 
-    <script src="page.js"></script>
+    <script src="../monday.js"></script>
     <script>
       const app = Elm.Page.init({ node: loadItHere });
     </script>
